set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

#add_executable(test_spinlock test_spinlock.cpp) 
#add_executable(test_threadgroup test_threadgroup.cpp) 
#add_executable(test_shell test_shell.cpp) 
#add_executable(test_fs test_fs.cpp) 
#add_executable(test_mpi test_mpi.cpp) 
add_executable(test_archive test_archive.cpp) 
set(CMAKE_EXE_LINKER_FLAGS "-Wl,-export-dynamic")
#target_link_libraries(test_spinlock  libgtest_main.a  -pthread -lrt -ldl -lutil -lnsl -lmpi_cxx -lopen-rte -lopen-pal -lgflags -lglog  -lmpi -lzmq -lyaml-cpp -lgtest)
#target_link_libraries(test_spinlock ${GTEST_BOTH_LIBRARIES}  -pthread -lrt -ldl -lutil -lnsl -lmpi_cxx -lopen-rte -lopen-pal -lgflags -lglog -lmpi   )
#target_link_libraries(test_threadgroup ${GTEST_BOTH_LIBRARIES}  -pthread -lrt -ldl -lutil -lnsl -lmpi_cxx -lopen-rte -lopen-pal -lgflags -lglog -lmpi   )
#target_link_libraries(test_shell ${GTEST_BOTH_LIBRARIES}  -pthread -lrt -ldl -lutil -lnsl -lmpi_cxx -lopen-rte -lopen-pal -lgflags -lglog -lmpi   )
#target_link_libraries(test_fs ${GTEST_BOTH_LIBRARIES}  -pthread -lrt -ldl -lutil -lnsl -lmpi_cxx -lopen-rte -lopen-pal -lgflags -lglog -lmpi   )
#target_link_libraries(test_mpi ${GTEST_BOTH_LIBRARIES}  -pthread -lrt -ldl -lutil -lnsl -lmpi_cxx -lopen-rte -lopen-pal -lgflags -lglog -lmpi   )
target_link_libraries(test_archive ${GTEST_BOTH_LIBRARIES}  -pthread -lrt -ldl -lutil -lnsl -lmpi_cxx -lopen-rte -lopen-pal -lgflags -lglog -lmpi   )